# SCM_coursework

./: pyproject.toml  requiments.txt
app/: models.py
app/notebooks/: mrp copy.ipynb  mrp.ipynb
